--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body {
   margin: 0;
   padding-bottom: 0.5rem;
   letter-spacing: 0.5rem;
-  color: #00a82a ;
+  color: #c8a2c8 ;
   transition: all 0.3s ease;
   z-index: 3;
 }
@@ -197,15 +197,15 @@ a {
   z-index: 0;
 }
 .loader span {
-  color: #00a82a;
-  text-shadow: 0 0 0 #00a82a;
+  color: #faebd7;
+  text-shadow: 0 0 0 #faebd7;
   -webkit-animation: loading 1s ease-in-out infinite alternate;
 }
 
 @-webkit-keyframes loading {
   to {
-    text-shadow: 20px 0 70px #00a82a;
-    color: #00a82a;
+    text-shadow: 20px 0 70px #ff0266;
+    color: #ff0266;
   }
 }
 .loader span:nth-child(2) {
